# compact-on-demand-rapid-encoding-of-sequences

./: LICENSE.md  README.md  pyproject.toml
benchmaks/: 00_generate_test_data.py  01_benchmark_vs_fasta.py  benchmark_results.csv
src/core_seq/: __init__.py  _codec.py  loader.py  reader.py  writer.py
tests/: 01_Initial_tests.py  02_loader_tests.py
