# This is the standard configuration file for a modern Python project.
# It tells tools like pip and pytest everything they need to know.

[build-system]
# These lines are mostly boilerplate. They tell pip what tools to use to build your project.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# This section contains the core metadata for your project.
name = "core-seq"
version = "0.1.0"
authors = [
  { name="Pranava Upparlapalli", email="author@example.com" },
]
description = "A high-performance binary format for biological sequences, designed to accelerate modern bioinformatics and machine learning."
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# These are the libraries your project needs to RUN.
dependencies = [
    "numpy",
    "tqdm", # Added tqdm here as it's used by the writer
]

[project.optional-dependencies]
# These are libraries needed only for DEVELOPMENT and TESTING.
dev = [
    "pytest",
]

[tool.setuptools]
# This is the most CRITICAL part for solving your import error.
# This line tells setuptools: "My package's source code lives inside the 'src' directory."
package-dir = {"" = "src"}
